[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Oliver Chalk"]
license = "Apache-2.0"

[profile.release]
opt-level = 3
debug = true

[profile.paranoid]
inherits = "release"
overflow-checks = true
debug-assertions = true

[profile.paranoid.package."*"]
overflow-checks = false
debug-assertions = false

[profile.performance]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[workspace.lints.clippy]
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
disallowed_methods = "warn"                  # See `clippy.toml`.
get_first = "allow"
inline-always = "allow"
match_bool = "allow"
missing_const_for_fn = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
needless-raw-string-hashes = "allow"
new_without_default = "allow"
pedantic = { level = "warn", priority = -1 }
print_stdout = "warn"
similar_names = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
todo = "warn"
too_many_lines = "allow"
trivially_copy_pass_by_ref = "warn"

[workspace.dependencies]
agave-feature-set = { git = "https://github.com/anza-xyz/agave" }
agave-scheduler-batch.path = "./crates/scheduler-batch"
agave-scheduler-bindings = { git = "https://github.com/anza-xyz/agave" }
agave-scheduler-fifo.path = "./crates/scheduler-fifo"
agave-scheduler-greedy-revenue.path = "./crates/scheduler-greedy-revenue"
agave-scheduler-greedy-throughput.path = "./crates/scheduler-greedy-throughput"
agave-schedulers.path = "./crates/schedulers"
agave-scheduling-utils = { git = "https://github.com/anza-xyz/agave" }
agave-transaction-view = { git = "https://github.com/anza-xyz/agave" }
arrayref = "0.3.9"
bincode = "1.3.3"
borsh = "1.6.0"
chrono = "0.4.42"
clap = "4.5.51"
crossbeam-channel = "0.5.15"
expect-test = "1.5.1"
eyre = "0.6.12"
futures = { version = "0.3.31", default-features = false }
hashbrown = "0.16.0"
indexmap = "2.13.0"
jito-protos.path = "./crates/jito-protos"
metrics = "0.24.2"
metrics-nats-exporter.git = "https://github.com/OliverNChalk/metrics-nats-exporter.git"
min-max-heap = "1.3.0"
prost = "0.11.9"
prost-types = "0.11.9"
rts-alloc = "2.0.0"
serde = "1.0.228"
serde_json = "1.0.145"
serde_repr = "0.1.20"
serde_with = "3.16.1"
serde_yaml = "0.9.34"
shaq = "1.0.0"
slotmap = "1.0.7"
solana-clock = "3.0.0"
solana-compute-budget-instruction = { git = "https://github.com/anza-xyz/agave" }
solana-compute-budget-interface = "3.0.0"
solana-cost-model = { git = "https://github.com/anza-xyz/agave" }
solana-fee = { git = "https://github.com/anza-xyz/agave" }
solana-fee-structure = "3.0.0"
solana-hash = "3.0.1"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-packet = "3.0.0"
solana-pubkey = "3.0.0"
solana-pubsub-client = "3.0.0"
solana-rpc-client = "3.0.0"
solana-rpc-client-types = "3.0.0"
solana-runtime-transaction = { git = "https://github.com/anza-xyz/agave" }
solana-sdk-ids = "3.0.0"
solana-signature = "3.0.0"
solana-svm-transaction = { git = "https://github.com/anza-xyz/agave" }
solana-system-transaction = "3.0.0"
solana-transaction = "4.0.0"
static_assertions = "1.1.0"
strum = "0.27.2"
tokio = "1.48.0"
tonic = "0.9.2"
tonic-build = "0.9.2"
toolbox.git = "https://github.com/OliverNChalk/toolbox-rs"
tracing = "0.1.41"
