[package]
name = "agave-external-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
agave-scheduler-batch.workspace = true
agave-scheduler-fifo.workspace = true
agave-scheduler-greedy-revenue.workspace = true
agave-scheduler-greedy-throughput.workspace = true
agave-schedulers.workspace = true
agave-scheduling-utils = { workspace = true, features = ["agave-unstable-api"] }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true, features = ["alloc"] }
metrics-nats-exporter.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
solana-keypair.workspace = true
solana-pubkey.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "signal"] }
toolbox = { workspace = true, features = ["named_task", "shutdown", "tracing", "version"] }
tracing.workspace = true
