[package]
name = "agave-scheduler-greedy-revenue"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
agave-scheduler-bindings.workspace = true
agave-schedulers.workspace = true
agave-scheduling-utils = { workspace = true, features = ["agave-unstable-api"] }
agave-transaction-view.workspace = true
hashbrown.workspace = true
indexmap.workspace = true
metrics.workspace = true
min-max-heap.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
solana-clock.workspace = true
solana-compute-budget-instruction = { workspace = true, features = ["agave-unstable-api"] }
solana-cost-model = { workspace = true, features = ["agave-unstable-api"] }
solana-fee = { workspace = true, features = ["agave-unstable-api"] }
solana-fee-structure.workspace = true
solana-pubkey.workspace = true
solana-runtime-transaction = { workspace = true, features = ["agave-unstable-api"] }
solana-svm-transaction.workspace = true
solana-transaction.workspace = true
static_assertions.workspace = true

[dev-dependencies]
agave-scheduling-utils = { workspace = true, features = ["dev-context-only-utils"] }
solana-compute-budget-interface.workspace = true
solana-hash.workspace = true
solana-keypair.workspace = true
solana-transaction = { workspace = true, features = ["wincode"] }
